[package]
name = "calicostrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "calicostem"
crate-type = ["cdylib"]

[dependencies]
statrs = "*"
rayon = "*"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
numpy = { version = "*" }
ndarray = {version = "*", features = ["rayon"] }
rand = "0.8.5"
ordered-float = "2.10.0"

[profile.release]
opt-level = 3
lto = true